<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">
    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if0132.kalkulatorpersegipanjang.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung">
        <action
            android:id="@+id/action_hitungFragment_to_bentukFragment"
            app:destination="@id/bentukFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
    </fragment>
    <fragment
        android:id="@+id/bentukFragment"
        android:name="org.d3if0132.kalkulatorpersegipanjang.ui.BentukFragment"
        android:label="bentukFragment"
        tools:layout="@layout/fragment_bentuk" >
        <argument
            android:name="kategori"
            app:argType="org.d3if0132.kalkulatorpersegipanjang.model.KategoriPp" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if0132.kalkulatorpersegipanjang.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if0132.kalkulatorpersegipanjang.ui.histori.HistoryFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
</navigation>